[package]
name = "corky-zmq"
version = "0.1.0"
edition = "2021"

[banner]
ascii = """
\\033[1;36m◉
 \\033[1;37m│
\\033[1;36m◉\\033[1;37m──▶\\033[1;36m◉\\033[1;37m──▶\\033[1;36m◉\\033[1;37m──▶\\033[1;36m◉
 \\033[1;37m│
\\033[1;36m◉
\\033[0;31m  Corky ZMQ\\033[0m
"""


[dependencies]
env_logger = "0.11.8"
zmq = "0.10.0"
log = "0.4.20"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
ctrlc = "3.4"


[corky] 
is_corky_package = true
